--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,8 +2,12 @@
 
 <html>
     <head>
-        <meta name="viewport" content="width=device-width"/>
-        <link rel="stylesheet" href="~/css/Style.css"/>
+    <meta name="viewport" content="width=device-width"/>
+
+    <link rel="stylesheet"                      href="~/css/Style.css"/>
+    <link rel="stylesheet/less" type="text/css" href="~/css/styles.less" />
+
+    <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
         <title>@ViewBag.Title</title>
     </head>
     <body>
